;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(executables
 (names   make_opcodes cvt_emit)
 (modules make_opcodes cvt_emit))

(executables
 (names ocamlmklib ocamldep)
 (modules ocamlmklib ocamlmklibconfig ocamldep)
 (modes byte)
 (libraries ocamlcommon runtime stdlib))

(ocamllex
 (modules make_opcodes)
 (mode    fallback))

(ocamllex
 (modules cvt_emit)
 (mode    fallback))

(rule
 (deps Makefile %{project_root}/Makefile.config)
 (targets ocamlmklibconfig.ml)
 (action (run make %{targets})))

(install
 (section bin)
 (package ocaml)
 (files
  (ocamlmklib.exe as ocamlmklib)
  (ocamldep.exe as ocamldep)))
