;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Guillaume Bury, OCamlPro                           *
;*                                                                        *
;*   Copyright 2020 OCamlPro SAS                                          *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(alias
  (name testing)
  (deps testing.cma testing.cmxa)
)

(library
 (name testing)
 (wrapped false)
 (libraries stdlib)
 (flags (:standard -nostdlib -linkall))
)
