;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Guillaume Bury, OCamlPro                           *
;*                                                                        *
;*   Copyright 2020 OCamlPro SAS                                          *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(executable
  (name expect_test)
  (modes byte)
  (flags (:standard -principal -nostdlib -cclib "-I runtime"))
  (libraries ocamltoplevel ocamlbytecomp ocamlcommon runtime stdlib)
  (modules expect_test)
)


