(rule
  (targets simplify.ml)
  (deps
    rec_modules
    template/simplify.templ.ml
    simplify_expr.rec.ml
    simplify_named.rec.ml
    simplify_set_of_closures.rec.ml
    simplify_static_const.rec.ml
    simplify_toplevel.rec.ml
    simplify_expr.rec.mli
    simplify_named.rec.mli
    simplify_toplevel.rec.mli
    simplify_set_of_closures.rec.mli
    simplify_static_const.rec.mli
  )
  (action (run ../scripts/assemble_rec_modules.sh
               template/simplify.templ.ml
               rec_modules
               simplify.ml))
)
