(rule
  (targets flambda_type0.ml)
  (deps
    rec_modules
    flambda_type0.templ.ml
    type_descr.rec.ml
    type_grammar.rec.ml
    type_of_kind/boilerplate/type_of_kind_value.rec.ml
    type_of_kind/type_of_kind_value0.rec.ml
    type_of_kind/boilerplate/type_of_kind_naked_immediate.rec.ml
    type_of_kind/type_of_kind_naked_immediate0.rec.ml
    type_of_kind/boilerplate/type_of_kind_naked_float.rec.ml
    type_of_kind/type_of_kind_naked_float0.rec.ml
    type_of_kind/boilerplate/type_of_kind_naked_int32.rec.ml
    type_of_kind/type_of_kind_naked_int32_0.rec.ml
    type_of_kind/boilerplate/type_of_kind_naked_int64.rec.ml
    type_of_kind/type_of_kind_naked_int64_0.rec.ml
    type_of_kind/boilerplate/type_of_kind_naked_nativeint.rec.ml
    type_of_kind/type_of_kind_naked_nativeint0.rec.ml
    resolved_type.rec.ml
    structures/closures_entry.rec.ml
    structures/function_declaration_type.rec.ml
    env/meet_env.rec.ml
    env/typing_env_extension.rec.ml
    env/typing_env_level.rec.ml
    env/typing_env.rec.ml
    structures/lattice_ops.rec.ml
    structures/product.rec.ml
    structures/row_like.rec.ml
    type_descr.rec.mli
    type_grammar.rec.mli
    type_of_kind/boilerplate/type_of_kind_value.rec.mli
    type_of_kind/type_of_kind_value0.rec.mli
    type_of_kind/boilerplate/type_of_kind_naked_immediate.rec.mli
    type_of_kind/type_of_kind_naked_immediate0.rec.mli
    type_of_kind/boilerplate/type_of_kind_naked_float.rec.mli
    type_of_kind/type_of_kind_naked_float0.rec.mli
    type_of_kind/boilerplate/type_of_kind_naked_int32.rec.mli
    type_of_kind/type_of_kind_naked_int32_0.rec.mli
    type_of_kind/boilerplate/type_of_kind_naked_int64.rec.mli
    type_of_kind/type_of_kind_naked_int64_0.rec.mli
    type_of_kind/boilerplate/type_of_kind_naked_nativeint.rec.mli
    type_of_kind/type_of_kind_naked_nativeint0.rec.mli
    resolved_type.rec.mli
    structures/closures_entry.rec.mli
    structures/function_declaration_type.rec.mli
    env/meet_env.rec.mli
    env/typing_env_extension.rec.mli
    env/typing_env_level.rec.mli
    env/typing_env.rec.mli
    structures/lattice_ops.rec.mli
    structures/product.rec.mli
    structures/row_like.rec.mli
  )
  (action (run ../scripts/assemble_rec_modules.sh
               flambda_type0.templ.ml
               rec_modules
               flambda_type0.ml))
)
